--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.0",
+    "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.37.3",
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "lodash": "^4.17.21",
     "mssql": "^11.0.1",
     "next": "13.2.4",
     "next-seo": "^5.15.0",
@@ -27,10 +28,12 @@
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
     "react-responsive": "^9.0.2",
+    "react-window": "^1.8.10",
     "sass": "^1.80.3",
     "sass-loader": "^13.2.2",
     "simplebar": "^6.2.4",
     "simplebar-react": "^3.2.3",
+    "swr": "^2.2.5",
     "uuid": "^9.0.0"
   }
 }
