--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-daterangepicker": "^8.0.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
