--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "apexcharts": "^3.37.3",
     "bootstrap": "^5.2.3",
     "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "^13.2.4",
     "lodash": "^4.17.21",
     "mssql": "^11.0.1",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "next-seo": "^5.15.0",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
