--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.37.3",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.4.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "lodash": "^4.17.21",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-bootstrap-icons": "^1.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
