--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.3.0",
     "react-responsive": "^9.0.2",
     "react-window": "^1.8.10",
     "sass": "^1.80.3",
