--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "simplebar": "^6.2.4",
     "simplebar-react": "^3.2.3",
     "swr": "^2.2.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   }
 }
