--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.460.0",
     "mssql": "^11.0.1",
     "next": "^13.2.4",
     "next-seo": "^5.15.0",
@@ -33,6 +34,7 @@
     "react-icons": "^5.3.0",
     "react-responsive": "^9.0.2",
     "react-window": "^1.8.10",
+    "redis": "^4.7.0",
     "sass": "^1.80.3",
     "sass-loader": "^13.2.2",
     "simplebar": "^6.2.4",
