--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
     "react-responsive": "^9.0.2",
+    "react-select": "^5.8.3",
     "react-window": "^1.8.10",
     "sass": "^1.80.3",
     "sass-loader": "^13.2.2",
