--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.37.3",
     "bootstrap": "^5.2.3",
-    "chart.js": "^4.4.5",
+    "chart.js": "^4.4.6",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
     "lodash": "^4.17.21",
