--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.37.3",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.6",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
@@ -27,7 +28,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-daterangepicker": "^8.0.0",
-    "react-bootstrap-icons": "^1.10.2",
+    "react-bootstrap-icons": "^1.11.4",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
@@ -42,6 +43,7 @@
     "sass-loader": "^13.2.2",
     "simplebar": "^6.2.4",
     "simplebar-react": "^3.2.3",
+    "sql": "^0.78.0",
     "swr": "^2.2.5",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
