--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.6",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "compression": "^1.7.5",
     "date-fns": "^4.1.0",
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
@@ -23,6 +24,7 @@
     "mssql": "^11.0.1",
     "next": "^13.2.4",
     "next-seo": "^5.15.0",
+    "node-cache": "^5.1.2",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
