--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dashui-free-nextjs-admin-template",
   "version": "0.1.0",
@@ -12,12 +11,15 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.37.3",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.6",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "mssql": "^11.0.1",
