oForm.Control   type="text"   value={searchTerm}   onChange={(e) => onSearch(e.target.value)}   onKeyDown={(e) => {     if (e.key === "Enter") {       e.preventDefault(); // Stop form submission     }   }} />

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "^13.2.4",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.460.0",
     "mssql": "^11.0.1",
     "next": "^13.2.4",
@@ -51,6 +52,3 @@
     "xlsx": "^0.18.5"
   }
 }
-
-
-
