--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.460.0",
+    "mermaid": "^11.4.1",
     "mssql": "^11.0.1",
     "next": "^13.2.4",
     "next-auth": "^4.24.11",
