--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-auth": "^4.24.11",
     "next-seo": "^5.15.0",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.10.1",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -51,6 +52,7 @@
     "react-select": "^5.8.3",
     "react-window": "^1.8.10",
     "redis": "^4.7.0",
+    "resend": "^4.5.0",
     "sass": "^1.80.3",
     "sass-loader": "^13.2.2",
     "simplebar": "^6.2.4",
