--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dashui-free-nextjs-admin-template",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -35,6 +36,8 @@
     "next-auth": "^4.24.11",
     "next-seo": "^5.15.0",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
