--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
     "ioredis": "^5.6.0",
