--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "dotenv": "^16.5.0",
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "ioredis": "^5.6.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
