--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.37.3",
     "bcrypt": "^5.1.1",
