--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.5.0",
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
+    "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "ioredis": "^5.6.0",
@@ -45,6 +46,7 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
+    "pdf-parse": "^1.1.1",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
