--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "^1.3.1",
     "apexcharts": "^3.37.3",
+    "autoprefixer": "^10.4.21",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
@@ -47,6 +48,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "pdf-parse": "^1.1.1",
+    "postcss": "^8.5.6",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -70,6 +72,7 @@
     "simplebar-react": "^3.2.3",
     "sql": "^0.78.0",
     "swr": "^2.2.5",
+    "tailwindcss": "^4.1.11",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
   },
