--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.5.0",
     "eslint": "8.37.0",
     "eslint-config-next": "^13.2.4",
+    "exceljs": "^4.4.0",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
