--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.6",
     "prism-react-renderer": "^1.3.5",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
