--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
+    "canvas": "^3.2.0",
     "chart.js": "^4.4.6",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-datalabels": "^2.2.0",
